@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD xmwde-0_p20120304.ebuild 906 RMD160 0147b18fa2c658cc3fc0929f115bc7ad9ef9d0f0 SHA1 24f138213121dc55526037bdaa4562877fba8668 SHA256 6edeee05bcf017e3a1e340048f8ddd6b6179b367dc6d567501ab25014f2b7ebf
-MISC ChangeLog 2061 RMD160 a7bf0182a41a1ebff96fa481efdfb93314b0121d SHA1 6f51d5fd72222d5c10251df17a895c3f697744ed SHA256 241f61e94e0099d219ad04cedc7ff1bd6a0dfa021a1c4f7ae39c99c75cf15df8
+EBUILD xmwde-0_p20120304.ebuild 924 RMD160 bf95bc6dc5a93109a8ff8d435f62e97c4b75f78a SHA1 f0be50d732ade3ea4e404a7c14d7443a98282d5d SHA256 574369ffd9b3da67d275fc7ebbf812f420178d4b726182e73611c8f1c40d18af
+EBUILD xmwde-0_p20120505.ebuild 914 RMD160 9b5cd04b31f13f1ac61a9a78af0005a358014924 SHA1 bb4de9df5229479ff353eec43480f46bebc64ef6 SHA256 d8601f379f47d1410898c0f58e432450d805ff2bcf317acf919e0a558f09544b
+MISC ChangeLog 2281 RMD160 a73b0194bbf1a68712c986daf4f8c3d591c055d9 SHA1 d8c7deed122a5b80dd5138ec7615fd04fe8c1ce7 SHA256 13aa57b1cfcdee50baf9edb6452f136331055172e50fa845b3cd64deb6625d55
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9Tq9UACgkQknrdDGLu8JAm/AD/fdz7nkTf3029IvnJX+RAEL3N
-+qIsmAOknFgJwa8HHXAA/3kYeaXjFtE3r1giAlPID0yUEyPOOURYpXtAqZCKclU8
-=1TXb
+iF4EAREIAAYFAk+lFCYACgkQknrdDGLu8JBA5gD/d+as1ZYY8ZijUIrxq5fATREU
+tiNSKvpC5+N3+lHfBwMA/0CaqCvx9ZgvP23Y2LxRVryDs+4tdPHv+8TxOf+wQwH7
+=OTVR
 -----END PGP SIGNATURE-----
