@@ -23,10 +23,10 @@ RDEPEND="
 	app-text/mupdf
 	app-text/paps
 	gnome-base/gnome-keyring
-	gnome-extra/gnome-utils
 	media-fonts/dina
 	media-fonts/terminus-font
 	media-gfx/feh
+	media-gfx/gnome-screenshot
 	net-misc/hotot
 	virtual/xmwce
 	x11-apps/setxkbmap
@@ -37,7 +37,7 @@ RDEPEND="
 	x11-apps/xset
 	x11-base/xorg-server
 	x11-misc/alock
-	x11-misc/dmenu
+	x11-misc/dmenu[xft]
 	x11-misc/trayer-srg
 	x11-misc/wmname
 	x11-misc/x2x
@@ -47,5 +47,4 @@ RDEPEND="
 	x11-misc/xscreensaver
 	x11-terms/rxvt-unicode[256-color,xft]
 	x11-wm/cwm
-	media-fonts/dina
 	"
